Prevent content from overflowing background
Sample page where <blockquote>, <li>, and <p> content overflowed background:

https://www.technologytoolbox.com/blog/jjameson/2013/04/30/installation-guide-for-sharepoint-server-2010-and-office-web-apps

Issue: technology-toolbox/website#63

--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -12,6 +12,12 @@ aside {
   margin-bottom: 1.5rem;
 }
 
+blockquote,
+li,
+p {
+  overflow: auto;
+}
+
 ol > li > ol > li {
   list-style: lower-alpha;
 }
